# CUPID-be

./: Dockerfile  MODELS_PACKAGE_REFACTORING.md  MODELS_REFACTORING_GUIDE.md  README.md  REFACTORING_COMPLETE_SUMMARY.md  SERIALIZERS_PACKAGE_REFACTORING.md  TEST_SUMMARY.md  VIEWS_TESTS_PACKAGE_REFACTORING.md  WEBSOCKET_CHAT_FIX.md  build_files.sh  engine.py  engine_gen_quest.py  places.json  pyproject.toml  requirements.txt  start_server.sh  vercel.json
.github/workflows/: main.yml
config/: asgi.py  settings.py  urls.py
docs/: PREFERENCES_API_DOCUMENTATION.md  TEST_CASES.csv  test_report-v1.1.csv  test_sample.csv
templates/: api_index.html  chat_ws_test.html
test/users/: IMPLEMENTATION_COMPLETE.txt  INDEX.md  README.md  TEST_SUMMARY.md  test_auth_views.py  test_chat_views.py  test_integration.py  test_match_views.py  test_models.py  test_preference_views.py  test_profile_views.py  test_task_views.py  test_utils.py
users/: admin.py  apps.py  authentication.py  consumers.py  models.py  routing.py  serializers.py  serializers_auth.py  serializers_core.py  signals.py  tests.py  token_auth.py  urls.py  views.py  views_auth.py
users/migrations/: 0001_initial.py  0002_alter_quests_unique_together.py  0002_usermodesettings.py  0003_alter_quests_match.py  0003_remove_task_is_transformed_to_quest.py  0004_task_is_free.py  0005_match.py  0006_quests.py  0007_chat_message_chat_users_chat_created_e9e4d4_idx.py  0008_preference_userpreference.py  0009_quests_hint_user1_quests_hint_user2_and_more.py
users/models/: __init__.py  chat.py  match.py  preference.py  profile.py  (+3 more)
(+17 files in other folders)
